tests-trybuild/tests/riscv-rt/entry/fail_return_tuple.stderr
error: return type must be !
 --> tests/riscv-rt/entry/fail_return_tuple.rs:2:21
  |
2 | fn entry_point() -> () {}
  |                     ^^
